pipelines/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-svc
  labels:
    app: express-svc
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: express-app
